@startuml ERDiagram
entity Medico {
    * id
    --
    * matricula
    * nombre
    * apellido
}

entity Domicilio {
    * id
    --
    * calle
    * altura
    * n_psio
    * departamento
}

entity Telefono {
    * id
    --
    * numero
}

entity Sexo {
    * id
    --
    * nombre
    * descripcion
}

entity Paciente {
    * id
    --
    * n_documento
    * nombre
    * apellido
    * id_sexo
    * id_domicilio
    * id_telefono
    * id_tipo_de_documento
    * email
}

entity EstadoDeSolicitud {
    * id
    --
    * nombre
    * descripcion
}

entity Estudio {
    * id
    --
    * nombre
    * descripcion
    * limite_inferior
    * limite_superior
    * id_metodo
    * id_unidad_de_medida
}

entity Solicitud {
    * id
    --
    * receta
    * id_paciente
    * id_extraccionista
    * id_estado
    * id_medico
    * fecha_hora_inicio
    * fecha_hora_finalizacion
    * CAP
}

entity Extraccionista {
    * id
    --
    * nombre
    * apellido
}

entity Muestra {
    * id
    --
    * descripcion
    * fecha_hora_extraccion
    * id_resultado
}

entity Metodo {
    * id
    --
    * nombre
    * descripcion
}

entity Resultado {
    * id
    --
    * valor_hallado
    * fecha
    * id_solicitud
    * id_estudio
    * observacion
}

entity UnidadDeMedida {
    * id
    --
    * unidad
    * descripcion
}

entity TipoDeDocumento {
    * id
    --
    * nombre
    * descripcion
}

Paciente ||..|| Domicilio
Paciente ||..|{ Telefono
Paciente }o..|| Sexo
Paciente ||..|{ Solicitud
Paciente }o..|| TipoDeDocumento
Solicitud }o..|| Medico
Solicitud }o..|| EstadoDeSolicitud
Resultado ||..o| Muestra
Solicitud }o..|| Extraccionista
Estudio }o..|| Metodo
Solicitud ||..|{ Resultado
Estudio }o..|| UnidadDeMedida
Resultado }o..|| Estudio

@enduml